--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>about you in their various discussions with others.</p>
         </div>
         <div class="right-image">
-            there is an image here
+            <h2>Amebo</h2>
         </div>
     </div>
     <div class="container">
