--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <form action="index.php" method="post">
                     <p class="lauching-soon">Launching Very Soon</p>
                     <div class="input-container">
-                        <input class="input-field" type="name" name="name" placeholder=" Enter Your Name">
-                        <input class="input-field" type="email" name="email" placeholder=" Enter Your Email Address">
+                    
+                        <input class="input-field" type="email" name="email" placeholder=" Enter Your Email Address" required>
 
                         <span type="submit" name="submit" class="icon">Notify Me</span>
                     </div>
@@ -117,8 +117,8 @@
         <div class="launching-soon-form" data-aos="zoom-in-up">
             <form action="index.php" method="post">
                 <div class="input-container">
-                    <input class="input-field" type="name" name="name" placeholder=" Enter Your Name">
-                    <input class="input-field" type="email" name="email" placeholder=" Enter Your Email Address">
+                
+                    <input class="input-field" type="email" name="email" placeholder=" Enter Your Email Address" required>
                     <span class="icon">Notify Me</span>
                 </div>
             </form>
